--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 variables:
   DOCKER_DRIVER: overlay
-  PKG_PATH: gitlab.jetstack.net/jetstack-experimental/vault-unsealer
+  PKG_PATH: github.com/jetstack-experimental/vault-unsealer
 
 stages:
 - build
