--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,14 +4,20 @@ variables:
 
 stages:
 - build
-- docker
 - deploy
+- docker
 
 # configure $GOPATH correctly on all build stages
 before_script:
-  - mkdir -p "$GOPATH/src/$PKG_PATH" && rmdir "$GOPATH/src/$PKG_PATH"
-  - ln -s "$(pwd)" "$GOPATH/src/$PKG_PATH"
-  - cd "$GOPATH/src/$PKG_PATH"
+  - mkdir -p "${GOPATH}/src/${PKG_PATH}" && rmdir "${GOPATH}/src/${PKG_PATH}"
+  - mv "${CI_PROJECT_DIR}" "${GOPATH}/src/${PKG_PATH}"
+  - cd "${GOPATH}/src/${PKG_PATH}"
+  - mkdir -p "${CI_PROJECT_DIR}"
+
+after_script:
+  - cd "/"
+  - rm -rf "${CI_PROJECT_DIR}"
+  - mv "${GOPATH}/src/${PKG_PATH}" "${CI_PROJECT_DIR}"
 
 verify:golang:
   image: golang:1.8
@@ -28,6 +34,55 @@ build:golang:
   - docker
   script:
   - make build
+  except:
+  - tags
   artifacts:
     paths:
     - vault-unsealer_linux_amd64
+
+deploy:release:
+  image: golang:1.8
+  stage: deploy
+  tags:
+  - docker
+  script:
+  - curl -sL https://github.com/goreleaser/goreleaser/releases/download/v0.24.0/goreleaser_Linux_x86_64.tar.gz > /tmp/goreleaser.tar.gz
+  - echo "8d494e03d6ab6e2e1bcbb795859f3618454078eaeb21906437958b32b332cee4  /tmp/goreleaser.tar.gz" | sha256sum -c
+  - cd /usr/local/bin && tar xvfz /tmp/goreleaser.tar.gz goreleaser
+  - cd "${GOPATH}/src/${PKG_PATH}"
+  - goreleaser --snapshot ## TODO: remove me
+  #only: TODO: add me
+  #- tags
+  artifacts:
+    paths:
+    - vault-unsealer_linux_amd64
+
+docker:master_build_push:
+  before_script: []
+  after_script: []
+  image: docker:1.12
+  stage: docker
+  tags:
+  - docker
+  services:
+  - docker:dind
+  script:
+  - mkdir -p ~/.docker && echo "${DOCKER_AUTH_CONFIG}" > ~/.docker/config.json && chmod 600 ~/.docker/config.json
+  - make docker_push IMAGE_TAGS="${CI_BUILD_REF_SLUG}-${CI_PIPELINE_ID} canary"
+  only:
+  - master
+
+docker:tags_build_push:
+  before_script: []
+  after_script: []
+  image: docker:1.12
+  stage: docker
+  tags:
+  - docker
+  services:
+  - docker:dind
+  script:
+  - mkdir -p ~/.docker && echo "${DOCKER_AUTH_CONFIG}" > ~/.docker/config.json && chmod 600 ~/.docker/config.json
+  - make docker_push IMAGE_TAGS="${CI_COMMIT_TAG} latest"
+  only:
+  - tags
