Use DOCKER_HOST: tcp://localhost:2375
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 variables:
   DOCKER_DRIVER: overlay
+  DOCKER_HOST: tcp://localhost:2375
   PKG_PATH: github.com/jetstack/vault-unsealer
   GORELEASER_HASH: 634f5eedd1000a1eb675c2ca93bbbc889aa0388df76aea3501d7734616910584
 
